Redoing it
Redid the database schema, the models for Owner, RouteType and Trail, everything working fine as intended
